Fix menu on small screens

--- a/home.css
+++ b/home.css
@@ -18,20 +18,20 @@ body {
 }
 
 .nav-box, .content-box {
-  margin: 0 3pt;
   position: relative;
 }
 
 .page-root {
   width: 100%;
   height: 100%;
-  padding: 3pt 0;
+  padding: 3pt;
 }
 
 .nav-box {
   width: 180pt;
   height: 100%;
   float: left;
+  margin-right: 3pt;
 }
 
 .nav-box > iframe {
@@ -133,7 +133,8 @@ body {
   }
   .nav-box {
     display: none;
-    width: 0;
+    width: 100%;
+    float: none;
   }
   #open-nav-button {
     display: block;
